--- a/Lab1/Makefile
+++ b/Lab1/Makefile
@@ -1,7 +1,7 @@
 GCC_FLAGS = -Wextra -Werror -Wall -Wno-gnu-folding-constant -ldl -rdynamic -I ../utils/heap_help/
 
-all: libcoro.c solution.c mergesort.c
-	gcc $(GCC_FLAGS) libcoro.c solution.c mergesort.c ../utils/heap_help/heap_help.c -o main
+all: libcoro.c solution.c
+	gcc $(GCC_FLAGS) libcoro.c solution.c ../utils/heap_help/heap_help.c -o main
 
 .PHONY: clean
 clean:
